2015-04-14  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* X3DBrowserWidget.cpp: 

2015-04-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj: 

2015-03-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj:
	* Units.svg: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.cproj:
	* ComposedWidgets.h:
	* SFRotationAdjustment.h:
	* X3DViewpointEditor.h:
	* X3DGeoViewpointEditor.h:
	* X3DOrthoViewpointEditor.h:
	* X3DTransformEditor.h:
	* X3DGeoTransformEditor.h: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* PrecisionPlacementPanel.cpp: 

2015-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* PrecisionPlacementPanel.cpp: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* Makefile.in: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.in:
	* Titania.pidb:
	* Titania.cproj: 

2015-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.pl:
	* Components.pl:
	* ColorPerVertexEditor.cpp: 

2015-01-23  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* BrowserWidget.x3dv: 

2015-01-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-12-28  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-12-23  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* ChangeLog: 

2014-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-12-13  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureEditor.xml: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.cpp: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp: 
