@@ -1,3 +1,11 @@
+2015-04-15  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* run.pl:
+	* X3DBrowserEditor.h:
+	* X3DBrowserWidget.h:
+	* X3DBrowserEditor.cpp:
+	* X3DBrowserWidget.cpp: 
+
 2015-04-14  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* run.pl:
